# wamp_router

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  NOTICE  README.md  config.toml  main.cpp  test_config.toml  vcpkg.json
config/: clang-format  vcpkg-baseline.json
include/: config.hpp  crypto_utils.hpp  event_channel.hpp  invocation_tracker.hpp  procedure_handler.hpp  pubsub_handler.hpp  raw_socket.hpp  registration_manager.hpp  subscription_manager.hpp  wamp_client.hpp  wamp_id.hpp  wamp_messages.hpp  wamp_serializer.hpp  wamp_server.hpp  wamp_session.hpp
scripts/: add-license-headers.sh  build.sh  ci-build.sh  cmake-build.sh  debug.sh  gen-test-certs.sh  gen-test-keypair.sh  run.sh  shell.sh
tests/: test_config.cpp  test_crypto_utils.cpp  test_integration.cpp  test_main.cpp  test_procedure_handler.cpp  test_raw_socket.cpp  test_subscription_manager.cpp  test_wamp_client.cpp  test_wamp_id.cpp  test_wamp_serializer.cpp  test_wamp_session.cpp
